<resources>
    <string name="app_name">Github User</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="avatar">Avatar</string>
    <string name="username">Username</string>
    <string name="about">About </string>
    <string name="repository">Repository</string>
    <string name="company">Company</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>

    <!--    Pager detail-->
    <string name="tab_text_1">Following</string>
    <string name="tab_text_2">Followers</string>

    <string name="github_user">Github User</string>
    <string name="setting">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="search_hint">Masukkan kata</string>

    <string name="search">Cari</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

    <string name="data_followers">Data Followers</string>
    <string name="data_following">Data Following</string>
    <string name="content_tab_text" />
    <string name="insert_username">Masukkan Username...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
